--- a/index.html
+++ b/index.html
@@ -11,31 +11,64 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@600;700&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="style.css" />
     <script defer src="script.js"></script>
 
     <title>Frontend Mentor | Rock, Paper, Scissors</title>
-
-    Score Rules You Picked The House Picked You Win You Lose Play Again
-
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div>
+    <section class="title-score_wrapper border-radius">
+      <h1>
+        Rock<br />
+        Paper<br />
+        Scissors
+      </h1>
+      <div class="score-container border-radius">
+        <p class="score-text">Score</p>
+        <p class="score-number">12</p>
+      </div>
+    </section>
+    <section class="game-icons_wrapper">
+      <div class="game-icon-container icon-paper">
+        <img
+          src="images/icon-paper.svg"
+          alt="game icon of a hand showing paper"
+          class="game-icon"
+        />
+      </div>
+      <div class="game-icon-container icon-scissors">
+        <img
+          src="images/icon-scissors.svg"
+          alt="game icon of a hand showing scissors"
+          class="game-icon"
+        />
+      </div>
+      <div class="game-icon-container icon-rock">
+        <img
+          src="images/icon-rock.svg"
+          alt="game icon of a hand showing rock"
+          class="game-icon"
+        />
+      </div>
+    </section>
+    <footer class="attribution_wrapper">
+      <button class="btn-rules border-radius">Rules</button>
+      <div class="attribution-links-container">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Goran Kolar</a>.
+      </div>
+    </footer>
     <!---->
   </body>
 </html>
