Added computer making moves!

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     <section class="game-icons_wrapper-picked hidden">
       <div class="placeholder_wrapper">
         <p>You picked</p>
-        <div class="placeholder player">
-          <div class="game-icon-box-picked hidden">
+        <div class="placeholder player hidden">
+          <div class="game-icon-box-picked">
             <img
               src="images/icon-rock.svg"
               alt="game icon"
@@ -75,7 +75,7 @@
       </div>
       <div class="placeholder_wrapper">
         <p>The house picked</p>
-        <div class="placeholder house">
+        <div class="placeholder house hidden">
           <div class="game-icon-box-picked hidden">
             <img
               src="images/icon-rock.svg"
