Added win/lose logic and score update functions

--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
           </div>
         </div>
       </div>
+      <div class="win-lose_wrapper hidden">
+        <p class="win-lose-text">You win</p>
+        <button class="btn-play-again border-radius">Play again</button>
+      </div>
       <div class="placeholder_wrapper">
         <p>The house picked</p>
         <div class="placeholder house hidden">
